--- a/vanilla weather search.html
+++ b/vanilla weather search.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-widthdevice-widthh1<, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-widthdevice-width, initial-scale=1.0">
+    <title>Weather search App</title>
 </head>
 <body>
     <h1>Welcome to the Weather App</h1>
